[gd_scene load_steps=14 format=3 uid="uid://b43bucurt026m"]

[ext_resource type="Script" path="res://objects/player/energy_pellet.gd" id="1_q2f4e"]
[ext_resource type="EventAsset" uid="uid://gg6rckoxf8nn" path="res://addons/FMOD/editor/resources/events/{91a06109-16c7-40cd-9d3f-49f8cdd7730b}.tres" id="2_47h2e"]
[ext_resource type="Texture2D" uid="uid://3ghmm7c5yahr" path="res://icon.svg" id="3_65spq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dw8d0"]
albedo_color = Color(0.2, 1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ead46"]
material = SubResource("StandardMaterial3D_dw8d0")
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_u2ec1"]
size = Vector3(3, 2, 3)

[sub_resource type="Gradient" id="Gradient_6db8e"]
offsets = PackedFloat32Array(0, 0.809524)
colors = PackedColorArray(0.2, 1, 1, 1, 0.741176, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7p2p0"]
gradient = SubResource("Gradient_6db8e")

[sub_resource type="Curve" id="Curve_lkwvh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.407942), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hhrmp"]
curve = SubResource("Curve_lkwvh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tkgho"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.5
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
tangential_accel_min = 3.0
tangential_accel_max = 3.0
scale_curve = SubResource("CurveTexture_hhrmp")
color_ramp = SubResource("GradientTexture1D_7p2p0")
attractor_interaction_enabled = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7xyjw"]
vertex_color_use_as_albedo = true

[sub_resource type="BoxMesh" id="BoxMesh_7ykvy"]
material = SubResource("StandardMaterial3D_7xyjw")
size = Vector3(0.2, 0.2, 0.2)

[node name="EnergyPellet" type="Area3D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_q2f4e")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60843, 0)
mesh = SubResource("BoxMesh_ead46")

[node name="Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_u2ec1")

[node name="PrimaryParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61026, 0)
emitting = false
amount = 200
one_shot = true
process_material = SubResource("ParticleProcessMaterial_tkgho")
draw_pass_1 = SubResource("BoxMesh_7ykvy")

[node name="SecondaryParticles" type="GPUParticles3D" parent="."]
emitting = false
one_shot = true

[node name="ChargingSfx" type="StudioEventEmitter3D" parent="."]
event = ExtResource("2_47h2e")

[node name="MinimapIcon" type="Sprite3D" parent="."]
transform = Transform3D(-10, -1.50996e-06, 6.60024e-15, 0, -4.37114e-07, -1, 1.50996e-06, -10, 4.37114e-08, 0, 21, 0)
texture = ExtResource("3_65spq")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
